test/errors/unsupported_binary_operator.correct
error: unsupported_binary_operator.li:1:18: unsupported operation between string and number
│ println("string" / 10);
│         ~~~~~~~~~~~~~
│                  ^
